<resources>
    <!-- Nome das telas -->
    <string name="app_name">Caça Estúdio</string>
    <string name="tela_pagamento">Forma de Pagamento</string>
    <string name="tela_agendados">Estúdios Agendados</string>
    <string name="tela_avaliar">Avaliar</string>
    <string name="tela_lista">Estúdios</string>


    <!-- Strings da Tela de Pagamento -->
    <string name="pgmt_local">Pagar no Local</string>
    <string name="pgmt_credito">Cartão de Crédito</string>
    <string name="pgmt_numero">Número</string>
    <string name="pgmt_mes">MM/AA</string>
    <string name="pgmt_cvc">CVC</string>
    <string name="pgmt_titular">Titular</string>
    <string name="pgmt_cpf">CPF/CNPJ</string>
    <string name="pgmt_total">Valor total: </string>
    <string name="pgmt_preco">R$50,00</string>

    <!-- Nome dos Botões -->
    <string name="btn_concluir">Concluir</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="comentario">Escrever um comentário (opcional)</string>
    <string name="btn_enviar">Enviar</string>
    <string name="avaliar_comentarios">Comentários:</string>
    <string name="title_activity_lista">ListaActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- para o menu de contexto da Tela com lista de Estudios -->
    <string name="action_agendar">Agendar</string>
    <string name="action_avaliar">Avaliar</string>

    <!-- texto da caixa de diálogo [[[Sobre]]] -->
    <string name="about_dialog_text">
        <![CDATA[
           O aplicativo <b>Caça Estúdios</b>
            foi desenvolvido para facilitar a busca por estúdios
            de música na cidade de Manaus.
        ]]>
    </string>
    <string name="about_dialog_tittle">Caça Estúdio</string>
    <string name="ok">OK</string>

    <!-- String da tela de Login -->
    <string name="ht_login">Login</string>
    <string name="ht_senha">Senha</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_cadastrar">Cadastrar</string>

    <!-- String da tela de Cadastro -->
    <string name="ht_nome">Nome</string>
    <string name="ht_telefone">(99)99999 9999</string>
    <string name="ht_email">exemplo@gmail.com</string>
    <string name="ht_confsenha">Confirmar senha</string>
    <string name="btn_salvar">Salvar</string>


    <!-- String da tela de Agendamento -->
    <string name="ck_8h">08:00</string>
    <string name="ck_9h">09:00</string>
    <string name="ck_10h">10:00</string>
    <string name="ck_11h">11:00</string>
    <string name="ck_12h">12:00</string>
    <string name="text_hora_disp">Horários disponíveis:</string>
    <string name="btn_agendar">Agendar</string>
    <string name="tela_estudio">Estúdio</string>
    <string name="menu_mapa">Ver no mapa</string>
    <string name="menu_agendar">Agendar estúdio</string>
    <string name="menu_avaliar">Avaliar estúdio</string>
    <string name="menu_cancelar">Cancelar agendamento</string>
    <string name="menu_ligar">Ligar para estúdio</string>


</resources>
