<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.pos.cacaestudio.activity.PagamentoActivity"
    android:orientation="vertical"
    android:layout_marginRight="16dp"
    android:layout_marginLeft="16dp">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pgmt_local"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pgmt_credito"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pgmt_numero"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pgmt_mes"
            android:gravity="left"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pgmt_cvc"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pgmt_titular"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pgmt_cpf"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pgmt_total"
            android:textSize="20sp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pgmt_preco"
            android:textSize="20sp"
            android:gravity="right"
            android:layout_marginRight="16dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/pagamento_btn_concluir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Concluir"
        android:layout_gravity="right"
        android:layout_marginTop="50dp"/>



</LinearLayout>
