<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.pos.cacaestudio.CadastrarActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/cad_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_nome"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"

        />
    <EditText
        android:id="@+id/cad_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_telefone"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/cad_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_email"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
    />
    <EditText
        android:id="@+id/cad_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_senha"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"

        />
    <EditText
        android:id="@+id/cad_conf_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ht_confsenha"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"

        />
    <Button
        android:id="@+id/id_salvar"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

</LinearLayout>
